--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,84 +1,64 @@
----
----
-
-@string{aps = {American Physical Society,}}
-
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+@article{jain-2023-where,
+title = {Where It Really Matters: Few-Shot Environmental Conservation Media Monitoring for Low-Resource Languages},
+year = {2023},
+journal = {Preprint, in submission to AAAI '24},
+author = {Sameer Jain and Sedrick Keh and Shova Chettri and Karun Dewan and Pablo Izquierdo and Johanna Prussman and Pooja Shreshtha and César Suárez and Ryan Shi and Lei Li and Fei Fang},},
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
+@inproceedings{jain-etal-2023-multi,
+    title = "Multi-Dimensional Evaluation of Text Summarization with In-Context Learning",
+    author = "Jain, Sameer  and
+      Keshava, Vaishakh  and
+      Mysore Sathyendra, Swarnashree  and
+      Fernandes, Patrick  and
+      Liu, Pengfei  and
+      Neubig, Graham  and
+      Zhou, Chunting",
+    editor = "Rogers, Anna  and
+      Boyd-Graber, Jordan  and
+      Okazaki, Naoaki",
+    booktitle = "Findings of the Association for Computational Linguistics",
+    year = "2023",
+    address = "Toronto, Canada",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/2023.findings-acl.537",
+    doi = "10.18653/v1/2023.findings-acl.537",
+    pages = "8487--8495",
+    abbr = {ACL Findings}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  selected={true}
+@inproceedings{10.1145/3531146.3533107,
+author = {Laufer, Benjamin and Jain, Sameer and Cooper, A. Feder and Kleinberg, Jon and Heidari, Hoda},
+title = {Four Years of FAccT: A Reflexive, Mixed-Methods Analysis of Research Contributions, Shortcomings, and Future Prospects},
+year = {2022},
+isbn = {9781450393522},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3531146.3533107},
+doi = {10.1145/3531146.3533107},
+booktitle = {Proceedings of the ACM Conference on Fairness, Accountability, and Transparency},
+pages = {401–426},
+numpages = {26},
+keywords = {values, topics, impact, community perspectives, FAccT, reflexivity, mixed methods},
+location = {Seoul, Republic of Korea},
+series = {FAccT '22},
+abbr = {FAccT}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
-}
-
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
-}
-
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
-}
-
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif}
+@inproceedings{10.1145/3284432.3284452,
+author = {Ochs, Magalie and Jain, Sameer and Blache, Philippe},
+title = {Toward an Automatic Prediction of the Sense of Presence in Virtual Reality Environment},
+year = {2018},
+isbn = {9781450359535},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3284432.3284452},
+doi = {10.1145/3284432.3284452},
+booktitle = {Proceedings of the International Conference on Human-Agent Interaction},
+pages = {161–166},
+numpages = {6},
+keywords = {virtual patient, virtual reality, sense of presence},
+location = {Southampton, United Kingdom},
+series = {HAI '18},
+abbr = {HAI}
 }
