--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,8 +1,9 @@
 @article{jain-2023-where,
 title = {Where It Really Matters: Few-Shot Environmental Conservation Media Monitoring for Low-Resource Languages},
-year = {2023},
-journal = {Preprint, in submission to AAAI '24},
-author = {Sameer Jain and Sedrick Keh and Shova Chettri and Karun Dewan and Pablo Izquierdo and Johanna Prussman and Pooja Shreshtha and César Suárez and Ryan Shi and Lei Li and Fei Fang},},
+year = {2024},
+journal = {AAAI Conference on Artificial Intelligence - AI for Social Impact Track},
+author = {Sameer Jain and Sedrick Keh and Shova Chettri and Karun Dewan and Pablo Izquierdo and Johanna Prussman and Pooja Shreshtha and César Suárez and Ryan Shi and Lei Li and Fei Fang},
+abbr = {AAAI}
 }
 
 @inproceedings{jain-etal-2023-multi,
